feat: integration file upload with bulk insert
