# internal/web/upload_api.go
@@ -51,3 +51,34 @@ func (api Router) UploadFile(c *gin.Context) {
 		"message": "success upload image",
 	})
 }
+
+// UploadFileURL upload file from url to server
+// @Summary      UploadFileURL upload file from url to server
+// @Description  UploadFileURL upload file from url to server
+// @Tags         Upload File API
+// @Param        file_url  formData  string  false "fileURL"
+// @Router       /upload/file/url [post]
+func (api Router) UploadFileURL(c *gin.Context) {
+	resp, err := http.Get(c.PostForm("file_url"))
+	if err != nil {
+		http.Error(c.Writer, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	defer resp.Body.Close()
+
+	dst, err := os.Create(fmt.Sprintf(webP+"/images/%d", time.Now().UnixNano()))
+	if err != nil {
+		http.Error(c.Writer, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	defer dst.Close()
+
+	_, err = io.Copy(dst, resp.Body)
+	if err != nil {
+		http.Error(c.Writer, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	c.JSON(http.StatusOK, map[string]any{
+		"message": "success upload image",
+	})
+}
